# Solver

./: README.md  mkdocs.yml  pyproject.toml
docs/: index.md
solver/: __init__.py
solver/discreta/: sample1.py
src/continua_vs_discreta/: cont_vs_disc.py
src/discreta/: model.py  sample2.py  test2.py
