[project]
name = "solver"
version = "0.1.0"
description = ""
authors = [
    {name = "Bruno-Gomes-QA"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.5.49"
mkdocstrings = "^0.27.0"
mkdocstrings-python = "^1.13.0"
jinja2 = "^3.1.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
